# llm-zip

./: .dockerignore  .gitignore  .llmzip.config.example  .llmzipignore.example  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.api  Dockerfile.models  KNOWN_LIMITATIONS.md  LICENSE  README.md  STORY.md  commit_msg.txt  docker-compose.split.yml  docker-compose.yml  dockerignore  llmzip.config.example  llmzipignore.local.example  pyproject.toml  requirements.api.txt  requirements.txt  scaffold.py
.github/workflows/: ci.yml  release.yml
llmzip/: __init__.py  logging_config.py
llmzip/api/: __init__.py  app.py  dependencies.py  limiter.py  schemas.py
llmzip/api/routes/: __init__.py  compress.py  compress_file.py  estimate.py  health.py  info.py  models.py
llmzip/cli/: __init__.py  compress_cmd.py  download_models.py  main.py  prices_cmd.py
llmzip/config/: __init__.py  loader.py
llmzip/conversion/: __init__.py  file_converter.py
llmzip/core/: __init__.py  featured_models.py  lingua_adapter.py  protocols.py  remote_lingua.py  remote_scorer.py  savings_calculator.py  semantic_scorer.py  token_counter.py
llmzip/i18n/: __init__.py  en.py  es.py  ja.py  pt.py  zh.py
llmzip/models_server/: app.py
llmzip/pricing/: __init__.py  disk_cache.py  fallback.py  fetcher.py  resolver.py
tests/: __init__.py  batch_req.json  test_api_integration.py  test_api_v1.py  test_chunker.py  test_chunker_stress.py  test_compress_cmd.py  test_file.txt  test_file_converter.py  test_i18n.py  test_loader.py  test_negative_cases.py  test_remote_adapters.py  test_resolver.py  test_savings_calculator.py  test_semantic_scorer.py  test_token_counter.py  test_token_resilience.py  test_v021_features.py
